# confidential_assets

./: Cargo.toml  LICENSE.txt  README.md  bench_native.sh  rust-toolchain.toml
.circleci/: config.yml
benches/: confidential_transaction.rs  correctness_proof.rs  elgamal_decryption.rs  mercat_account.rs  mercat_asset.rs  mercat_transaction.rs  range_proofs.rs  utility.rs
src/: account.rs  asset.rs  burn.rs  codec_wrapper.rs  errors.rs  lib.rs  macros.rs  testing.rs  transaction.rs
src/elgamal/: const_time_elgamal_encryption.rs  discrete_log.rs  mod.rs  multi_key.rs
src/proofs/: ciphertext_refreshment_proof.rs  ciphertext_same_value_proof.rs  correctness_proof.rs  encrypting_same_value_proof.rs  encryption_proofs.rs  mod.rs  range_proof.rs  transcript.rs  wellformedness_proof.rs
tests/: bad_public_key.rs  bad_refreshment.rs  transaction_amount.rs
