[package]
name = "confidential_assets"
version = "1.1.0"
edition = "2021"
description = "Polymesh confidential assets."
authors = [ "Polymesh Association" ]
license-file = "LICENSE.txt"

[patch.crates-io]
bulletproofs = { version = "5.0.0", git = "https://github.com/PolymeshAssociation/bulletproofs", branch = "v5.0.0" }
#bulletproofs = { path = "../bulletproofs/" }

[dependencies]
# SCALE
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

# Common
serde = { version = "1.0.105", default-features = false, features = ["derive"], optional = true }
zeroize = { version = "1.1", default-features = false }
byteorder = { version = "^1.2.3", default-features = false, features = ["i128"] }
thiserror = "1.0.44"
log = "0.4"

uuid = { version = "1.6", default-features = false }

# Crypto
sha3 = { version = "0.10", default-features = false, optional = true }

rand_core = { version = "0.6", default-features = false}
rand = { version = "0.8", default-features = false }

curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
bulletproofs = { version = "5.0.0", default-features = false }

merlin = { version = "3.0.0", default-features = false }

rayon = { version = "1.7.0", optional = true }
bincode = { version = "1.3.3", optional = true }
itertools = { version = "0.10.5", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
# Crypto
sha3 = { version = "0.10", default-features = false }

wasm-bindgen-test = { version = "0.3.10"}
hex = { version = "0.4", default-features = false, features = ["alloc"] }
criterion = { version = "0.3" }

[features]
default = ["std", "rayon", "discrete_log"]
nightly = []

# Discrete log Elgamal decryption.
discrete_log = ["bincode", "itertools", "lazy_static"]

serde = [
  "dep:serde",
  "curve25519-dalek/serde",
  "bulletproofs/serde",
]

alloc = ["rand_core/alloc", "rand/alloc", "curve25519-dalek/alloc"]

no_std = []
std = [
 # General and optional
 "serde",
 # Crypto
 "rand_core/std",
 "rand/std",
 "rand/std_rng",
 "bulletproofs/std",
 # Other
 "codec/std",
 "uuid/std",
]

[[bench]]
name = "elgamal_decryption"
harness = false

[[bench]]
name = "range_proofs"
harness = false

[[bench]]
name = "confidential_transaction"
harness = false
